# modorganizer-game_xngine

./: .git-blame-ignore-revs  .gitignore  ARCHITECTURE_OVERVIEW.md  BUILDING.md  CMakeLists.txt  CMakePresets.json  DEPLOYMENT_SUCCESS.md  DOCUMENTATION_INDEX.md  Deploy.ps1  FindMO2.ps1  MODFORMAT.md  PHASE2_COMPLETION_SUMMARY.md  PROJECT_STATUS_DASHBOARD.md  QUICK_REFERENCE_GAME_PLUGINS.md  README.md  README_PLUGINS.md  REFACTOR_PLAN_XnGine.md  SESSION_LOG.md  SESSION_SUMMARY_REDGUARD_MODULE.md  XNGINE_GAMES_REFERENCE.md  XNGINE_GAME_MODULE_CHECKLIST.md  XN_GINE_ENGINE_VS_GAME_CLASSIFICATION.md  _tmp_rtx_query.ps1  _tmp_rtx_scan.ps1  build_and_deploy.bat  build_ms.bat  capture_crash.ps1  check_logs.bat  check_mods.ps1  deploy_only.ps1  err.txt  out.txt  rebuild_and_test.bat  run_vcpkg_install.bat  setup_build.ps1  test_plugin_load.ps1  vcpkg.json
config/: local.env.example.bat  local.env.example.ps1
src/: MapChanges.cpp  MapChanges.h  MapFile.cpp  MapFile.h  MapHeader.cpp  MapHeader.h  MenuFile.cpp  MenuFile.h  ModLoader.cpp  ModLoader.h  RGMODFrameworkWrapper.cpp  RGMODFrameworkWrapper.h  RedguardDataChecker.cpp  RedguardDataChecker.h  RtxDatabase.cpp  RtxDatabase.h  ScriptInstruction.cpp  ScriptInstruction.h  Utils.cpp  Utils.h  gameRedguard.h  game_redguard.json  gameredguard.cpp  launch_steam_direct.bat  logCrashDebug.cpp  mobase_stubs.h  redguard_installer.json  redguardsavegame.cpp  redguardsavegame.h
src/games/: README.md
src/games/arena/: CMakeLists.txt  arenadatachecker.h  arenamodatacontent.cpp  arenamodatacontent.h  arenasavegame.cpp  arenasavegame.h  arenasmoddatachecker.h  arenasmoddatacontent.cpp  arenasmoddatacontent.h  gamearena.cpp  gamearena.h  gamearena.json
src/games/battlespire/: CMakeLists.txt  battlespireafegame.cpp  battlespireafegame.h  battlespiredatachecker.h  battlespiremodatacontent.cpp  battlespiremodatacontent.h  battlespiresavegame.cpp  battlespiresavegame.h  battlespiretextrsc.cpp  battlespiretextrsc.h  battlespirewatertbl.cpp  battlespirewatertbl.h  gamebattlespire.cpp  gamebattlespire.h  gamebattlespire.json
src/games/daggerfall/: CMakeLists.txt  KEEP_PRUNE.md  daggerfallarch3dbsa.cpp  daggerfallarch3dbsa.h  daggerfallbiocodes.cpp  daggerfallbiocodes.h  daggerfallbiotxt.cpp  daggerfallbiotxt.h  daggerfallblocksbsa.cpp  daggerfallblocksbsa.h  daggerfallbooktxt.cpp  daggerfallbooktxt.h  daggerfallclimatepak.cpp  daggerfallclimatepak.h  daggerfallcommon.cpp  daggerfallcommon.h  daggerfallfallexehacks.cpp  daggerfallfallexehacks.h  daggerfallfallexeitems.cpp  daggerfallfallexeitems.h  daggerfallflatscfg.cpp  daggerfallflatscfg.h  daggerfallformatutils.cpp  daggerfallformatutils.h  daggerfallimageformats.cpp  daggerfallimageformats.h  daggerfallmagicdef.cpp  daggerfallmagicdef.h  daggerfallmapsbsa.cpp  daggerfallmapsbsa.h  daggerfallpak.cpp  daggerfallpak.h  daggerfallpoliticpak.cpp  daggerfallpoliticpak.h  daggerfallqbn.cpp  daggerfallqbn.h  daggerfallqbnpseudo.cpp  daggerfallqbnpseudo.h  daggerfallsavegame.cpp  daggerfallsavegame.h  (+23 more)
src/games/redguard/: CMakeLists.txt  gameredguard.cpp  gameredguard.h  gameredguard.json  redguardsavegame.cpp  redguardsavegame.h  redguardsitem.cpp  redguardsitem.h  redguardsmapchanges.cpp  redguardsmapchanges.h  redguardsmapdatabase.cpp  redguardsmapdatabase.h  redguardsmapfile.cpp  redguardsmapfile.h  redguardsmapheader.cpp  redguardsmapheader.h  redguardsmoddatachecker.h  redguardsmoddatacontent.cpp  redguardsmoddatacontent.h  redguardsparsedmapheader.h  redguardsrtxdatabase.cpp  redguardsrtxdatabase.h  redguardsscriptinstruction.cpp  redguardsscriptinstruction.h  redguardsscriptparser.cpp  redguardsscriptparser.h  redguardsscriptreader.cpp  redguardsscriptreader.h  redguardssoupflag.cpp  redguardssoupflag.h  redguardssoupfunction.cpp  redguardssoupfunction.h  redguardsutils.cpp  redguardsutils.h  redguardswld.cpp  redguardswld.h
src/xngine/: CMakeLists.txt  gamexngine.cpp  gamexngine.h  xnginearchiveextractor.h  xnginearchiveextractorfeature.cpp  xnginearchiveextractorfeature.h  xnginebsaformat.cpp  xnginebsaformat.h  xnginebsainvalidation.cpp  xnginebsainvalidation.h  xnginedataarchives.cpp  xnginedataarchives.h  xnginegameplugins.cpp  xnginegameplugins.h  xnginelocalsavegames.cpp  xnginelocalsavegames.h  xnginemoddatachecker.cpp  xnginemoddatachecker.h  xnginemoddatacontent.cpp  xnginemoddatacontent.h  xnginepaletteformat.cpp  xnginepaletteformat.h  xnginerscformat.cpp  xnginerscformat.h  xnginesavegame.cpp  xnginesavegame.h  xnginesavegameinfo.cpp  xnginesavegameinfo.h  xnginesavegameinfowidget.cpp  xnginesavegameinfowidget.h  xnginesavegameinfowidget.ui  xnginesaves.h  xnginescriptextender.cpp  xnginescriptextender.h  xnginetblformat.cpp  xnginetblformat.h  xngineunmanagedmods.cpp  xngineunmanagedmods.h  xnginewldformat.cpp  xnginewldformat.h
tools/: bs_set_save_level.ps1
tools/bsa_extract_cli/: CMakeLists.txt  build_tool.cmd  main.cpp
